SUBDIRS = \
	osmocom \
	$(NULL)

nobase_include_HEADERS = \
	osmocom/mgcp_client/mgcp_client.h \
	osmocom/mgcp_client/mgcp_client_endpoint_fsm.h \
	osmocom/mgcp_client/mgcp_client_fsm.h \
	osmocom/mgcp_client/mgcp_common.h \
	osmocom/mgcp/mgcp.h \
	osmocom/mgcp/mgcp_common.h \
	osmocom/mgcp/mgcp_internal.h \
	osmocom/mgcp/osmux.h \
	$(NULL)
